--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -6,7 +6,7 @@ header{
     width:100%;
     top:0;
     box-shadow: 0px 8px 3px  #e08e79;
-    z-index: 50;
+    z-index: 20;
 }
 
 header>nav>ul{
@@ -48,6 +48,7 @@ main>section>section:nth-child(1)>div{
 }
 
 main>section>section:nth-child(1)>div>pre>dfn{
+    font-style: normal;
     font-size: 30px;
     font-family: 'Roboto Condensed', sans-serif;
 }
@@ -63,7 +64,133 @@ main>section>section:nth-child(1)>section>img{
     height: 100vh;
     width: 1518px;
 }
+
 /*section 1 end*/
+
+/*About section start*/
+main>section>section:nth-child(2){
+    position: relative;
+    top: 87px;
+    background-color: #FAF9F6;
+}
+main>section>section:nth-child(2)>section>img{
+
+    position: relative;
+    top: 140px;
+    left: 134px;
+    box-shadow: 15px 10px 0px #795548;
+
+}
+
+main>section>section:nth-child(2)>section:nth-child(2){
+    position: relative;
+    left: 500px;
+    width: 664px;
+    bottom: 140px;
+    background-color: #C4C4C4;
+}
+
+main>section>section:nth-child(2)>section:nth-child(2) dfn{
+    font-size: 20px;
+    position: relative;
+    left: 244px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+}
+
+main>section>section:nth-child(2)>section:nth-child(2) pre:nth-child(2){
+    position: relative;
+    left: 55px;
+    font-size: 15px;
+}
+
+
+main>section>section:nth-child(2)>section:nth-child(2) pre:nth-child(3){
+    position: relative;
+    left: 81px;
+    font-size: 12px;
+}
+
+
+main>section>section:nth-child(2)>section:nth-child(2)>pre:nth-child(4){
+    position: relative;
+    right: 185px;
+}
+
+/*About section end*/
+
+/*My Skills Section*/
+main>section>section:nth-child(3) {
+    position: relative;
+    top: 65px;
+}
+
+main>section>section:nth-child(3) dfn{
+    position:absolute;
+    left: 642px;
+    bottom: 350px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Rochester', cursive;
+    font-family: 'Shalimar', cursive;
+    font-size: 30px;
+}
+
+main>section>section:nth-child(3)>div {
+    width: 30%;
+    /*border: solid 1px ;*/
+}
+
+main>section>section:nth-child(3)>div>pre{
+    font-size: 12px;
+}
+
+main>section>section:nth-child(3)>div>h3{
+
+    font-size: 15px;
+    position: relative;
+    left: 151px;
+    top: 130px;
+    width: 125px;
+    /*box-shadow: 15px 10px 0px ;*/
+}
+
+
+main>section>section:nth-child(3){
+    position: relative;
+    display: flex;
+    top:180px;
+}
+
+main>section>section:nth-child(3)>div>img{
+    position: relative;
+    bottom: 40px;
+    width: 127px;
+    left: 162px;
+}
+
+
+
+/*My services*/
+main>section>section:nth-child(4) {
+    position: relative;
+    top: 180px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
