--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -37,6 +37,7 @@ header a:link {
     text-decoration: none;
 }
 /*header end*/
+/*-------------------------------------------------------------------------------------------------------*/
 
 /*section 1 start*/
 main>section>section:nth-child(1)>div{
@@ -67,6 +68,8 @@ main>section>section:nth-child(1)>section>img{
 
 /*section 1 end*/
 
+/*-------------------------------------------------------------------------------------------*/
+
 /*About section start*/
 main>section>section:nth-child(2){
     position: relative;
@@ -74,8 +77,8 @@ main>section>section:nth-child(2){
     top: 87px;
     background-color: #FAF9F6;
 }
-main>section>section:nth-child(2)>section>img{
-
+main>section>section:nth-child(2)>section:nth-child(1)>img{
+    width: 300px;
     position: relative;
     top: 140px;
     left: 134px;
@@ -85,9 +88,9 @@ main>section>section:nth-child(2)>section>img{
 
 main>section>section:nth-child(2)>section:nth-child(2){
     position: relative;
-    left: 500px;
+    left: 586px;
     width: 664px;
-    bottom: 140px;
+    bottom: 198px;
     background-color: #C4C4C4;
 }
 
@@ -118,12 +121,15 @@ main>section>section:nth-child(2)>section:nth-child(2)>pre:nth-child(4){
     right: 185px;
 }
 
-/*About section end*/
 
-/*My Skills Section*/
+
+/*----------------------------------------------------------------------------------------------*/
+
+/*My Service Section*/
 main>section>section:nth-child(3) {
+    display: flex;
     position: relative;
-    top: 65px;
+    top: 180px;
     height: 100vh;
 }
 
@@ -138,47 +144,101 @@ main>section>section:nth-child(3) dfn{
 }
 
 main>section>section:nth-child(3)>div {
-    width: 30%;
+    width: 22%;
     position: relative;
-    top: 163px;
+    top: 127px;
     /*border: solid 1px ;*/
 }
 
-main>section>section:nth-child(3)>div>pre{
-    font-size: 12px;
-}
 
-main>section>section:nth-child(3)>div>h3{
+main>section>section:nth-child(3)>div:nth-child(2)>h3{
 
     font-size: 15px;
     position: relative;
     left: 151px;
-    top: 130px;
+    top: 235px;
     width: 125px;
+    background-color: #D7CCC8;
+    box-shadow: 15px 10px 0px #bdbdbd;
 
 }
 
+main>section>section:nth-child(3)>div:nth-child(3)>h3{
 
-main>section>section:nth-child(3){
+    font-size: 15px;
     position: relative;
-    display: flex;
-    top:180px;
+    left: 151px;
+    top: 235px;
+    width: 125px;
+    background-color: #D7CCC8;
+    box-shadow: 15px 10px 0px #bdbdbd;
+
 }
+
+main>section>section:nth-child(3)>div:nth-child(4)>h3{
+
+    font-size: 15px;
+    position: relative;
+    left: 151px;
+    top: 235px;
+    width: 125px;
+    background-color: #D7CCC8;
+    box-shadow: 15px 10px 0px #bdbdbd;
+}
+
+main>section>section:nth-child(3)>div:nth-child(5)>h3{
+
+    font-size: 15px;
+    position: relative;
+    left: 151px;
+    top: 235px;
+    width: 125px;
+    background-color: #D7CCC8;
+    box-shadow: 15px 10px 0px #bdbdbd;
+
+}
+
 
 main>section>section:nth-child(3)>div>img{
     position: relative;
     bottom: 40px;
-    width: 100px;
+    width: 155px;
     left: 162px;
+    box-shadow: 0px 30px 10px 10px #d1c4e9;
+}
+
+main>section>section:nth-child(3)>div:nth-child(2)>pre{
+    position: relative;
+    top: 115px;
+    right: 18px;
+}
+
+main>section>section:nth-child(3)>div:nth-child(3)>pre{
+    position: relative;
+    top: 115px;
+    right: 18px;
+}
+
+main>section>section:nth-child(3)>div:nth-child(4)>pre{
+    position: relative;
+    top: 115px;
+    right: 18px;
+}
+
+main>section>section:nth-child(3)>div:nth-child(5)>pre{
+    position: relative;
+    top: 115px;
+    right: 18px;
 }
 
 
 
-/*My services*/
+/*---------------------------------------------------------------------------------------------*/
+/*My skills*/
 main>section>section:nth-child(4) {
     position: relative;
     top: 180px;
-    background-color: #fffafa;
+    background-color: #FAF9F6;
     width:auto;
     height: 100vh;
 
@@ -196,30 +256,27 @@ main>section>section:nth-child(4)>h1{
 
 main>section>section:nth-child(4)>section{
     display: grid;
-    grid-template-rows:150px 150px 150px 150px;
-    grid-template-columns:200px 200px 200px;
-    /*position: relative;*/
+    background-color: #eceff1;
+    width: 820px;
+    /*grid-template-rows:150px 150px 150px 150px;*/
+    /*grid-template-columns:200px 200px 200px;*/
+    grid-template-rows: repeat(3,150px);
+    grid-template-columns:repeat(4,200px);
+    grid-gap:20px 30px;
     top: 100px;
     position: absolute;
-    left: 395px;
+    left: 344px;
 }
+/*My Skills Section end*/
+/*----------------------------------------------------------------------------------------------*/
 
-main>section>section:nth-child(4)>section>div{
-    border: 1px solid green;
-}
-
-main>section>section:nth-child(4)>section>div>img{
-    left: 30px;
-}
-
-/*My Service Section end*/
 
 /*Education Section Start*/
 main>section>section:nth-child(5){
     position: relative;
     top: 158px;
-    height: 100vh;
-    background-color: #EDF2F8;
+    height: 500px;
+    background-color:#cfd8dc;
 
 }
 
@@ -239,7 +296,7 @@ main>section>section:nth-child(5)>section:nth-child(3){
     height: 89px;
     left: 391px;
     background-color: #FFFFFF;
-    box-shadow: 15px 10px 0px #616161;
+    box-shadow: 10px 10px 0px #616161;
 
 }
 
@@ -287,6 +344,53 @@ main>section>section:nth-child(5)>blockquote:nth-child(5){
     font-family: 'News Cycle', sans-serif;
     font-size: 25px;
 }
+
+
+/*Education section end*/
+/*-----------------------------------------------------------------------------------------------*/
+
+
+
+/*My Project section start*/
+
+main>section>section:nth-child(6){
+    position: relative;
+    top: 136px;
+    background-color: #FAF9F6;
+}
+
+/*my Project section end*/
+
+
+/*--------------------------------------------------------------------------------------*/
+
+
+
+/*Contact Section start*/
+main>section>section:nth-child(7){
+    background-color: #fafafa;
+    position: relative;
+    top: 115px;
+}
+
+main>section>section:nth-child(7) h1{
+    position: relative;
+    top: 40px;
+
+}
+
+main>section>section:nth-child(7)>pre:nth-child(2){
+    position: relative;
+    left: 416px;
+    top: 30px;
+
+}
+
+
+
+
+
+
 
 
 
