--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -277,6 +277,7 @@ main>section>section:nth-child(4)>h1{
 }
 
 main>section>section:nth-child(4)>section{
+    width: 895px;
     display: grid;
     background-color: #eceff1;
     width: 820px;
@@ -380,7 +381,82 @@ main>section>section:nth-child(6){
     position: relative;
     top: 136px;
     background-color: #FAF9F6;
+    height: 100vh;
+
 }
+main>section>section:nth-child(6)>section:nth-child(2){
+    width: 700px;
+    height: 400px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 100px;
+    margin:auto;
+    overflow: hidden;
+    border: 5px solid #000000;
+}
+main>section>section:nth-child(6)>section:nth-child(2)>section{
+    width: 400%;
+    height: 100%;
+    /*border: 2px solid green;*/
+    display: flex;
+    /*position: absolute;*/
+    animation-name: slideme;
+    animation-duration: 10s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
+main>section>section:nth-child(6)>section:nth-child(2)>section>div {
+    width: 100%;
+    /*border: 2px solid blue;*/
+
+}
+
+main>section>section:nth-child(6)>section:nth-child(2)>section>div:nth-child(1) {
+    background: url("../images/supermarket.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+main>section>section:nth-child(6)>section:nth-child(2)>section>div:nth-child(2) {
+    background: url("../images/Vet Clinic.png");
+    background-size: cover;
+    background-position: center;
+}
+main>section>section:nth-child(6)>section:nth-child(2)>section>div:nth-child(3) {
+    background: url("../images/Parking System.png");
+    background-size: cover;
+    background-position: center;
+}
+
+main>section>section:nth-child(6)>section:nth-child(2)>section>div:nth-child(4) {
+    background: url("../images/Animation Assignment Image.png");
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+@keyframes slideme {
+    0%,15%{
+        transform: translateX(0);
+    }
+    25%,40%{
+        transform: translateX(-25%);
+    }
+    50%,70%{
+        transform: translateX(-50%);
+    }
+
+    80%,100%{
+        transform: translateX(-75%);
+    }
+}
+
+
+
 
 /*my Project section end*/
 
