--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -233,6 +233,9 @@ main>section>section:nth-child(3)>div:nth-child(2)>pre{
     position: relative;
     top: 115px;
     right: 18px;
+
+
+
 }
 
 main>section>section:nth-child(3)>div:nth-child(3)>pre{
@@ -268,7 +271,8 @@ main>section>section:nth-child(4) {
 
 main>section>section:nth-child(4)>h1{
     position: absolute;
-    left: 641px;
+    left: 655px;
+    font-size: 42px;
     font-family: 'Philosopher', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
     font-family: 'Rochester', cursive;
@@ -294,7 +298,7 @@ main>section>section:nth-child(4)>h1{
 /*div 1*/
 main>section>section:nth-child(4)>section>div:nth-child(1){
     position: absolute;
-    left: 96px;
+    left: 169px;
     top: 81px;
 }
 main>section>section:nth-child(4)>section>div:nth-child(1)>img{
@@ -309,7 +313,7 @@ main>section>section:nth-child(4)>section>div:nth-child(1)>pre{
 /*div 2*/
 main>section>section:nth-child(4)>section>div:nth-child(2){
     position: absolute;
-    left: 436px;
+    left: 545px;
     top: 94px;
 }
 main>section>section:nth-child(4)>section>div:nth-child(2)>img{
@@ -325,7 +329,7 @@ main>section>section:nth-child(4)>section>div:nth-child(2)>pre{
 /*div 3*/
 main>section>section:nth-child(4)>section>div:nth-child(3){
     position: absolute;
-    left: 812px;
+    left: 914px;
     top: 96px;
 }
 
@@ -342,7 +346,7 @@ main>section>section:nth-child(4)>section>div:nth-child(3)>pre{
 /*div 4*/
 main>section>section:nth-child(4)>section>div:nth-child(4){
     position: absolute;
-    left: 1115px;
+    left: 1200px;
     top: 90px;
 }
 
@@ -359,7 +363,7 @@ main>section>section:nth-child(4)>section>div:nth-child(4)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(5){
     position: absolute;
     top: 297px;
-    left: 94px;
+    left: 175px;
 }
 
 main>section>section:nth-child(4)>section>div:nth-child(5)>img{
@@ -376,7 +380,7 @@ main>section>section:nth-child(4)>section>div:nth-child(5)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(6){
     position: absolute;
     top: 270px;
-    left: 416px;
+    left: 515px;
 }
 
 main>section>section:nth-child(4)>section>div:nth-child(6)>img{
@@ -392,7 +396,7 @@ main>section>section:nth-child(4)>section>div:nth-child(6)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(7){
     position: absolute;
     top: 280px;
-    left: 777px;
+    left: 883px;
 }
 
 main>section>section:nth-child(4)>section>div:nth-child(7)>img{
@@ -409,7 +413,7 @@ main>section>section:nth-child(4)>section>div:nth-child(7)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(8){
     position: absolute;
     top: 287px;
-    left: 1126px;
+    left: 1220px;
 
 }
 
@@ -426,7 +430,7 @@ main>section>section:nth-child(4)>section>div:nth-child(8)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(9){
     position: absolute;
     top: 510px;
-    left: 82px;
+    left: 182px;
 }
 
 main>section>section:nth-child(4)>section>div:nth-child(9)>img{
@@ -442,7 +446,7 @@ main>section>section:nth-child(4)>section>div:nth-child(9)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(10){
     position: absolute;
     top: 516px;
-    left: 423px;
+    left: 550px;
 
 }
 
@@ -460,7 +464,7 @@ main>section>section:nth-child(4)>section>div:nth-child(10)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(11){
     position: absolute;
     top: 480px;
-    left: 771px;
+    left: 880px;
 }
 
 main>section>section:nth-child(4)>section>div:nth-child(11)>img{
@@ -477,7 +481,7 @@ main>section>section:nth-child(4)>section>div:nth-child(11)>pre{
 main>section>section:nth-child(4)>section>div:nth-child(12){
     position: absolute;
     top: 509px;
-    left: 1111px;
+    left: 1206px;
 }
 
 main>section>section:nth-child(4)>section>div:nth-child(12)>img{
