Added header and footer to other index files

--- a/myprojects/CSS Frameworks/BootstrapPOS/CSS/style.css
+++ b/myprojects/CSS Frameworks/BootstrapPOS/CSS/style.css
@@ -1,3 +1,21 @@
-.div{
+footer{
+    position: fixed;
+    top: 720px;
+    height: 40px;
+    background-color: black;
+}
+
+footer p{
+    font-size: 15px;
+    color: white;
+    display: inline-block;
+    margin: auto;
+    position: relative;
+    left: 31vw;
+    top: 1vh;
+}
+
+#carouselExampleDark{
+
 
 }
