--- a/myprojects/CSS Frameworks/BootstrapPOS/CSS/style.css
+++ b/myprojects/CSS Frameworks/BootstrapPOS/CSS/style.css
@@ -1,6 +1,6 @@
 footer{
-    position: fixed;
-    top: 720px;
+    position: relative;
+    top: 10px;
     height: 40px;
     background-color: black;
 }
