--- a/myprojects/SPA/assets/style/style.css
+++ b/myprojects/SPA/assets/style/style.css
@@ -1,6 +1,6 @@
 footer{
     position: relative;
-    top: 10px;
+    top: 50px;
     height: 40px;
     background-color: black;
 }
@@ -24,6 +24,10 @@ footer p{
 .card {
     position: relative;
     top: 10px;
+}
+
+body{
+    overflow-x: hidden;
 }
 
 
